# cpp-log-reader

./: .gitignore  CMakeLists.txt  README.md  lrconfig.json  readconfig.cpp
src/app/: main_001.cpp  readconfig.cpp
src/exceptions/: exceptions.hpp
src/header/: temp.hpp
src/note/: command_process.txt  file_dir_validation.txt  oop_problem.txt
src/objects/: InputCommand.hpp  commandvalidation.hpp  stringutils.hpp  temp.cpp
src/resource/: log_resource.hpp  logresource.hpp
src/utils/: fileutils.hpp  stringutils.hpp
